--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="section-description d-grid">
           <div class="scroll-reveal-left">
             <p class="description">
-              Hi, I'm <span class="text-bold">Muhamad Ariffudin</span>, and in my <span class="text-bold">five years</span>
+              Hi, I'm <span class="text-bold">Muhamad Ariffudin</span>, and in my <span class="text-bold">four years</span>
               as a <span class="text-bold">designer and developer</span>, I have turned hundreds of my client's <span class=
               "text-bold"> ideas into reality</span>. Developing and creating beautiful interactive user interfaces is my 
               <span class="text-bold">passion</span>.
