--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             </a>
 
             <div class="portfolio-card portfolio-card-6 large-button-container">
-              <a href="portfolio.html" class="large-button button-fill">
+              <a href="#" class="large-button button-fill">
                 view
                 <br> All
               </a>
