--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
               </div>
               <div class="card-heading">
                 <h5 class="card-title">Healtopedia</h5>
-                <span class="card-subtitle">Web design & development</span>
+                <span class="card-subtitle">Web Design & Development</span>
               </div>
             </a>
 
@@ -128,7 +128,7 @@
               </div>
               <div class="card-heading">
                 <h5 class="card-title">Heart Shaker</h5>
-                <span class="card-subtitle">App design</span>
+                <span class="card-subtitle">App Design</span>
               </div>
             </a>
 
@@ -138,7 +138,7 @@
               </div>
               <div class="card-heading">
                 <h5 class="card-title">Fiv5s</h5>
-                <span class="card-subtitle">Dashboard design</span>
+                <span class="card-subtitle">Dashboard Design & Development</span>
               </div>
             </a>
 
@@ -148,7 +148,7 @@
               </div>
               <div class="card-heading">
                 <h5 class="card-title">Alphacoretech</h5>
-                <span class="card-subtitle">Web design</span>
+                <span class="card-subtitle">Web Design & Development</span>
               </div>
             </a>
 
@@ -158,7 +158,7 @@
               </div>
               <div class="card-heading">
                 <h5 class="card-title">Srg Asia</h5>
-                <span class="card-subtitle">Web design</span>
+                <span class="card-subtitle">Web Design & Development</span>
               </div>
             </a>
 
