--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <title>Muhamad Ariffudin</title>
     <!-- !BOX ICONS -->
     <link rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
+    href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
     <!-- !SCROLL REVEAL -->
     <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
     <!-- !MY STYLESHEET -->
     <link rel="stylesheet" href="./assets/css/styles.css">
+    <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
 </head>
 <body>
     <!-- !HEADER -->
@@ -66,12 +67,16 @@
         <div class="section-description d-grid">
           <div class="scroll-reveal-left">
             <p class="description">
-              Hi, I'm <span class="text-bold">Muhamad Ariffudin</span>, and in my <span class="text-bold">five years</span>
-              as a <span class="text-bold">designer and developer</span>, I have turned hundreds of my client's <span class=
+              Hi, I'm <span class="text-bold">Muhamad Ariffudin</span>, and in my <span class="text-bold">four years</span>
+              as a <span class="text-bold">designer and developer</span>, I have turned many of my client's <span class=
               "text-bold"> ideas into reality</span>. Developing and creating beautiful interactive user interfaces is my 
-              <span class="text-bold">passion</span>.
+              <span class="text-bold">passion</span>. 
+              <br>Check out my "<a href="assets/resume/Muhamad Ariffudin.pdf" target="_blank" class="button"><span class="text-bold"><u>Resume</u></span></a>".
+
             </p>
+
           </div>
+
           <div class="scroll-reveal-right">
             <div class="description-image has-sparkles">
               <img src="./assets/images/bruno.png" alt="">
@@ -96,7 +101,12 @@
             <i class="bx bxl-figma"></i>
           </div>
         </div>
+
+
       </div>
+
+      <!-- <a href="assets/resume/Muhamad-Ariffudin.pdf" target="_blank" class="button">Resume</a> -->
+
     </section>
 
     <!-- !PORTFOLIO SECTION -->
@@ -114,21 +124,21 @@
 
             <a href="https://my.healtopedia.com/" class="portfolio-card portfolio-card-1">
               <div class="card-image">
-                <img src="./assets/images/mntn.png" alt="">
-              </div>
-              <div class="card-heading">
-                <h5 class="card-title">Healtopedia</h5>
-                <span class="card-subtitle">Web Design & Development</span>
-              </div>
-            </a>
-
-            <a href="https://apps.apple.com/my/app/heart-shaker/id1588733636" class="portfolio-card portfolio-card-2">
-              <div class="card-image">
                 <img src="./assets/images/blockchained.png" alt="">
               </div>
               <div class="card-heading">
-                <h5 class="card-title">Heart Shaker</h5>
-                <span class="card-subtitle">App Design</span>
+                <h5 class="card-title">Healtopedia</h5>
+                <span class="card-subtitle">Web design & development</span>
+              </div>
+            </a>
+
+            <a href="https://alphacoretech.net/" class="portfolio-card portfolio-card-2">
+              <div class="card-image">
+                <img src="./assets/images/rsound.png" alt="">
+              </div>
+              <div class="card-heading">
+                <h5 class="card-title">Alphacoretech</h5>
+                <span class="card-subtitle">Web design & development</span>
               </div>
             </a>
 
@@ -138,17 +148,17 @@
               </div>
               <div class="card-heading">
                 <h5 class="card-title">Fiv5s</h5>
-                <span class="card-subtitle">Dashboard Design & Development</span>
+                <span class="card-subtitle">Dashboard design & development</span>
               </div>
             </a>
 
-            <a href="https://alphacoretech.net/" class="portfolio-card portfolio-card-4">
+            <a href="https://samuraipaint.jp/" class="portfolio-card portfolio-card-4">
               <div class="card-image">
-                <img src="./assets/images/rsound.png" alt="">
+                <img src="./assets/images/mntn.png" alt="">
               </div>
               <div class="card-heading">
-                <h5 class="card-title">Alphacoretech</h5>
-                <span class="card-subtitle">Web Design & Development</span>
+                <h5 class="card-title">Samurai Paint</h5>
+                <span class="card-subtitle">Web design & development</span>
               </div>
             </a>
 
@@ -158,12 +168,12 @@
               </div>
               <div class="card-heading">
                 <h5 class="card-title">Srg Asia</h5>
-                <span class="card-subtitle">Web Design & Development</span>
+                <span class="card-subtitle">Web design & development</span>
               </div>
             </a>
 
             <div class="portfolio-card portfolio-card-6 large-button-container">
-              <a href="#" class="large-button button-fill">
+              <a href="portfolio.html" class="large-button button-fill">
                 view
                 <br> All
               </a>
