--- a/portfolio.html
+++ b/portfolio.html
@@ -122,13 +122,17 @@
                 <span class="card-subtitle">Web design</span>
               </div>
             </a>
+
+            <a href="https://www.srgasia.com.my/" class="portfolio-card portfolio-card-6">
+              <div class="card-image">
+                <img src="./assets/images/landie1.png" alt="">
+              </div>
+              <div class="card-heading">
+                <h5 class="card-title">Srg Asia</h5>
+                <span class="card-subtitle">Web design</span>
+              </div>
+            </a>
   
-            <div class="portfolio-card portfolio-card-6 large-button-container">
-              <a href="#" class="large-button button-fill">
-                view
-                <br> All
-              </a>
-            </div>
           </div>
         </div>
     </section>
