--- a/index.html
+++ b/index.html
@@ -105,6 +105,8 @@
 
       </div>
 
+      <!-- <a href="assets/resume/Muhamad-Ariffudin.pdf" target="_blank" class="button">Resume</a> -->
+
     </section>
 
     <!-- !PORTFOLIO SECTION -->
@@ -196,12 +198,22 @@
 
             <p class="description">If <span class="text-bold">you</span>
                would like to work <span class="text-bold">together</span> 
-               on a <span class="text-bold">project</span>, please fill out the 
-               <span class="text-bold">form</span> below. I can't wait to turn your 
+               on a <span class="text-bold">project</span>, lets get in  
+               <span class="text-bold">touch</span>. I can't wait to turn your 
                <span class="text-bold">ideas</span> into <span class="text-bold">reality 
                </span></p>
 
+               <br>
+               <div class="form-container">
+                <form action="" class="contact-form">
+                  <a href="mailto:muhamadariffudin49@gmail.com?subject=You've%20Got%20Job%20Request!" class="button form-button button-fill"> Send Message</a>
+                </form>
+              </div>
+
+              
+
           </div>
+
           <div class="scroll-reveal-right">
             <div class="description-image has-sparkles">
               <img src="./assets/images/statue_hero2.png" alt="">
@@ -209,33 +221,6 @@
           </div>
         </div> 
 
-        <div class="form-container">
-          <form action="" class="contact-form">
-            <div class="input-group">
-
-              <div class="input">
-                <input type="text" id="name" required>
-                <label form="name" class="input-label">Name <span
-                class="required-filed">*</span></label>
-              </div>
-
-              <div class="input">
-                <input type="text" id="email" required>
-                <label form="email" class="input-label">Email <span
-                class="required-filed">*</span></label>
-              </div>
-
-            </div>
-
-            <div class="input">
-              <input type="text" id="message" required>
-              <label form="message" class="input-label">Message <span
-              class="required-filed">*</span></label>
-            </div>
-
-            <button type="submit" class="button form-button button-fill">Send message</button>
-          </form>
-        </div>
       </div>
     </section>
 
