--- a/case.html
+++ b/case.html
@@ -95,7 +95,7 @@
               <div class="card-heading">
 
                 <div class="card-image01">
-                    <img src="./assets/images/mntn.png" alt="">
+                    <img src="./assets/images/Chat.png" alt="">
                 </div>
 
                 <div class="section-subtitle-container01">
