--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
             <a href="https://my.healtopedia.com/" class="portfolio-card portfolio-card-1">
               <div class="card-image">
-                <img src="./assets/images/blockchained.png" alt="">
+                <img src="./assets/images/healtopedia.png" alt="">
               </div>
               <div class="card-heading">
                 <h5 class="card-title">Healtopedia</h5>
@@ -134,7 +134,7 @@
 
             <a href="https://alphacoretech.net/" class="portfolio-card portfolio-card-2">
               <div class="card-image">
-                <img src="./assets/images/rsound.png" alt="">
+                <img src="./assets/images/alphacore.png" alt="">
               </div>
               <div class="card-heading">
                 <h5 class="card-title">Alphacoretech</h5>
@@ -144,7 +144,7 @@
 
             <a href="https://web.fiv5s.com/#/" class="portfolio-card portfolio-card-3">
               <div class="card-image">
-                <img src="./assets/images/recehtok.png" alt="">
+                <img src="./assets/images/hi5.png" alt="">
               </div>
               <div class="card-heading">
                 <h5 class="card-title">Fiv5s</h5>
@@ -154,7 +154,7 @@
 
             <a href="https://samuraipaint.jp/" class="portfolio-card portfolio-card-4">
               <div class="card-image">
-                <img src="./assets/images/mntn.png" alt="">
+                <img src="./assets/images/samurai.png" alt="">
               </div>
               <div class="card-heading">
                 <h5 class="card-title">Samurai Paint</h5>
@@ -164,7 +164,7 @@
 
             <a href="https://www.srgasia.com.my/" class="portfolio-card portfolio-card-5">
               <div class="card-image">
-                <img src="./assets/images/landie.png" alt="">
+                <img src="./assets/images/srg.png" alt="">
               </div>
               <div class="card-heading">
                 <h5 class="card-title">Srg Asia</h5>
