--- a/portfolio.html
+++ b/portfolio.html
@@ -73,9 +73,9 @@
 
           <div class="portfolio-cards d-grid">
 
-            <a href="https://my.healtopedia.com/" class="portfolio-card portfolio-card-1">
+            <a href="" class="portfolio-card portfolio-card-1">
               <div class="card-image">
-                <img src="./assets/images/mntn.png" alt="">
+                <img src="./assets/images/Chat.png" alt="">
               </div>
               <div class="card-heading">
                 <h5 class="card-title">Healtopedia</h5>
@@ -83,7 +83,7 @@
               </div>
             </a>
 
-            <a href="https://apps.apple.com/my/app/heart-shaker/id1588733636" class="portfolio-card portfolio-card-2">
+            <a href="" class="portfolio-card portfolio-card-2">
               <div class="card-image">
                 <img src="./assets/images/blockchained.png" alt="">
               </div>
@@ -93,7 +93,7 @@
               </div>
             </a>
 
-            <a href="https://web.fiv5s.com/#/" class="portfolio-card portfolio-card-3">
+            <a href="" class="portfolio-card portfolio-card-3">
               <div class="card-image">
                 <img src="./assets/images/recehtok.png" alt="">
               </div>
@@ -103,7 +103,7 @@
               </div>
             </a>
 
-            <a href="https://alphacoretech.net/" class="portfolio-card portfolio-card-4">
+            <a href="" class="portfolio-card portfolio-card-4">
               <div class="card-image">
                 <img src="./assets/images/rsound.png" alt="">
               </div>
@@ -113,7 +113,7 @@
               </div>
             </a>
 
-            <a href="https://www.srgasia.com.my/" class="portfolio-card portfolio-card-5">
+            <a href="" class="portfolio-card portfolio-card-5">
               <div class="card-image">
                 <img src="./assets/images/landie.png" alt="">
               </div>
@@ -123,7 +123,7 @@
               </div>
             </a>
 
-            <a href="https://www.srgasia.com.my/" class="portfolio-card portfolio-card-6">
+            <a href="" class="portfolio-card portfolio-card-6">
               <div class="card-image">
                 <img src="./assets/images/landie1.png" alt="">
               </div>
