--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             </a>
 
             <div class="portfolio-card portfolio-card-6 large-button-container">
-              <a href="" class="large-button button-fill">
+              <a href="project.html" class="large-button button-fill">
                 view
                 <br> All
               </a>
