--- a/project.html
+++ b/project.html
@@ -89,8 +89,8 @@
                 <img src="./assets/images/fitness01.png" alt="">
               </div>
               <div class="card-heading">
-                <h5 class="card-title">Heart Shaker</h5>
-                <span class="card-subtitle">App design</span>
+                <h5 class="card-title">Fitness Pro</h5>
+                <span class="card-subtitle">UI/UX Design</span>
               </div>
             </a>
 
