--- a/fitness.html
+++ b/fitness.html
@@ -56,7 +56,7 @@
     <section class="portfolio section" id="portfolio">
         <div class="container">
           <div class="section-title-container">
-            <h2 class="title section-title">Spark</h2>
+            <h2 class="title section-title">Fitness Pro</h2>
             <div class="section-subtitle-container">
               <h5 class="title section-subtitle">UI DESIGN / UX DESIGN</h5>
             </div>
