--- a/chat.html
+++ b/chat.html
@@ -148,7 +148,7 @@
                     and see what kind of pages would be necessary for the app.</span>
 
                 <div class="card-image01">
-                    <img src="./assets/images/Chat04.png" alt="">
+                    <img src="./assets/images/" alt="">
                 </div>
 
                 <div class="section-subtitle-container01">
