--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
               <div class="card-heading">
                 <h5 class="card-title">Healtopedia</h5>
                 <span class="card-subtitle">Web design & development</span>
+                <h6 class="card-subtitle">HTML CSS JS MYSQL PHP OneSignal</h6>
               </div>
             </a>
 
@@ -139,6 +140,7 @@
               <div class="card-heading">
                 <h5 class="card-title">Alphacoretech</h5>
                 <span class="card-subtitle">Web design & development</span>
+                <h6 class="card-subtitle">ReactJS</h6>
               </div>
             </a>
 
@@ -149,6 +151,7 @@
               <div class="card-heading">
                 <h5 class="card-title">Fiv5s</h5>
                 <span class="card-subtitle">Dashboard design & development</span>
+                <h6 class="card-subtitle">HTML CSS JS MYSQL PHP DOCKER</h6>
               </div>
             </a>
 
@@ -159,6 +162,7 @@
               <div class="card-heading">
                 <h5 class="card-title">Samurai Paint</h5>
                 <span class="card-subtitle">Web design & development</span>
+                <h6 class="card-subtitle">HTML CSS JS MYSQL PHP DOCKER</h6>
               </div>
             </a>
 
@@ -169,6 +173,7 @@
               <div class="card-heading">
                 <h5 class="card-title">Srg Asia</h5>
                 <span class="card-subtitle">Web design & development</span>
+                <h6 class="card-subtitle">ReactJS</h6>
               </div>
             </a>
 
