--- a/project.html
+++ b/project.html
@@ -89,7 +89,7 @@
                 <img src="./assets/images/fitness01.png" alt="">
               </div>
               <div class="card-heading">
-                <h5 class="card-title">Fitness Pro</h5>
+                <h5 class="card-title">Fitness Pror</h5>
                 <span class="card-subtitle">UI/UX Design</span>
               </div>
             </a>
