--- a/project.html
+++ b/project.html
@@ -89,11 +89,12 @@
                 <img src="./assets/images/fitness01.png" alt="">
               </div>
               <div class="card-heading">
-                <h5 class="card-title">Fitness Pror</h5>
+                <h5 class="card-title">Fitness Pro</h5>
                 <span class="card-subtitle">UI/UX Design</span>
               </div>
             </a>
 
+            <!-- 
             <a href="" class="portfolio-card portfolio-card-3">
               <div class="card-image">
                 <img src="./assets/images/recehtok.png" alt="">
@@ -133,6 +134,7 @@
                 <span class="card-subtitle">Web design</span>
               </div>
             </a>
+            -->
   
           </div>
         </div>
