--- a/project.html
+++ b/project.html
@@ -100,8 +100,9 @@
                 <img src="./assets/images/recehtok.png" alt="">
               </div>
               <div class="card-heading">
-                <h5 class="card-title">Fiv5s</h5>
-                <span class="card-subtitle">Dashboard design</span>
+                <h5 class="card-title">Healtopedia</h5>
+                <span class="card-subtitle">Web design & development</span>
+                <h6 class="card-subtitle">HTML CSS JS MYSQL PHP OneSignal</h6>
               </div>
             </a>
 
@@ -110,8 +111,9 @@
                 <img src="./assets/images/rsound.png" alt="">
               </div>
               <div class="card-heading">
-                <h5 class="card-title">Alphacoretech</h5>
-                <span class="card-subtitle">Web design</span>
+                <h5 class="card-title">Healtopedia</h5>
+                <span class="card-subtitle">Web design & development</span>
+                <h6 class="card-subtitle">HTML CSS JS MYSQL PHP OneSignal</h6>
               </div>
             </a>
 
@@ -119,22 +121,23 @@
               <div class="card-image">
                 <img src="./assets/images/landie.png" alt="">
               </div>
-              <div class="card-heading">
-                <h5 class="card-title">Srg Asia</h5>
-                <span class="card-subtitle">Web design</span>
+             <div class="card-heading">
+                <h5 class="card-title">Khaizan</h5>
+                <span class="card-subtitle">Web design & development</span>
+                <h6 class="card-subtitle">HTML CSS JS MYSQL PHP</h6>
               </div>
             </a>
-
+-->
             <a href="" class="portfolio-card portfolio-card-6">
               <div class="card-image">
-                <img src="./assets/images/landie1.png" alt="">
+                <img src="./assets/images/beyh.png" alt="">
               </div>
-              <div class="card-heading">
-                <h5 class="card-title">Srg Asia</h5>
-                <span class="card-subtitle">Web design</span>
+             <div class="card-heading">
+                <h5 class="card-title">Beyh Food</h5>
+                <span class="card-subtitle">Web design & development</span>
+                <h6 class="card-subtitle">HTML CSS JS MYSQL PHP</h6>
               </div>
             </a>
-            -->
   
           </div>
         </div>
