--- a/chat.html
+++ b/chat.html
@@ -93,7 +93,7 @@
               <div class="card-heading">
 
                 <div class="card-image01">
-                    <img src="./assets/images/chat01.png" alt="">
+                    <img src="./assets/images/Chat01.png" alt="">
                 </div>
 
                 <div class="section-subtitle-container01">
@@ -108,7 +108,7 @@
                 </div>
 
                 <div class="card-image01">
-                    <img src="./assets/images/chat02.png" alt="">
+                    <img src="./assets/images/Chat02.png" alt="">
                 </div>
 
                 <span class="card-subtitle02">For this project, I focused on user flows, sketching, wireframing, style guidelines, and prototyping.</span>
@@ -133,7 +133,7 @@
                 <span class="card-subtitle01">I then determined which features the app would require in order to be successful and helpful. I also made a user flow diagram to map out these features and determine what type of pages the app would require.</span>
 
                 <div class="card-image01">
-                    <img src="./assets/images/" alt="">
+                    <img src="./assets/images/Chat04.png" alt="">
                 </div>
 
                 <div class="section-subtitle-container01">
