--- a/project.html
+++ b/project.html
@@ -94,32 +94,31 @@
               </div>
             </a>
 
-            <!-- 
             <a href="" class="portfolio-card portfolio-card-3">
               <div class="card-image">
-                <img src="./assets/images/recehtok.png" alt="">
+                <img src="./assets/images/.png" alt="">
               </div>
               <div class="card-heading">
-                <h5 class="card-title">Healtopedia</h5>
-                <span class="card-subtitle">Web design & development</span>
-                <h6 class="card-subtitle">HTML CSS JS MYSQL PHP OneSignal</h6>
+                <h5 class="card-title"></h5>
+                <h5 class="card-title"></h5>
+                <span class="card-subtitle">UI/UX Design</span>
               </div>
             </a>
 
             <a href="" class="portfolio-card portfolio-card-4">
               <div class="card-image">
-                <img src="./assets/images/rsound.png" alt="">
+                <img src="./assets/images/.png" alt="">
               </div>
               <div class="card-heading">
-                <h5 class="card-title">Healtopedia</h5>
-                <span class="card-subtitle">Web design & development</span>
-                <h6 class="card-subtitle">HTML CSS JS MYSQL PHP OneSignal</h6>
+                <h5 class="card-title"></h5>
+                <h5 class="card-title"></h5>
+                <span class="card-subtitle">UI/UX Design</span>
               </div>
             </a>
 
             <a href="" class="portfolio-card portfolio-card-5">
               <div class="card-image">
-                <img src="./assets/images/landie.png" alt="">
+                <img src="./assets/images/.png" alt="">
               </div>
              <div class="card-heading">
                 <h5 class="card-title">Khaizan</h5>
@@ -127,7 +126,7 @@
                 <h6 class="card-subtitle">HTML CSS JS MYSQL PHP</h6>
               </div>
             </a>
--->
+
             <a href="https://sites.google.com/view/beyh/home" class="portfolio-card portfolio-card-6">
               <div class="card-image">
                 <img src="./assets/images/beyh.png" alt="">
