--- a/chat.html
+++ b/chat.html
@@ -133,7 +133,7 @@
                 <span class="card-subtitle01">I then determined which features the app would require in order to be successful and helpful. I also made a user flow diagram to map out these features and determine what type of pages the app would require.</span>
 
                 <div class="card-image01">
-                    <img src="./assets/images/Chat04.png" alt="">
+                    <img src="./assets/images/Chat.png" alt="">
                 </div>
 
                 <div class="section-subtitle-container01">
