--- a/project.html
+++ b/project.html
@@ -116,9 +116,9 @@
               </div>
             </a>
 
-            <a href="" class="portfolio-card portfolio-card-5">
+            <a href="https://www.khaizan.com/" class="portfolio-card portfolio-card-5">
               <div class="card-image">
-                <img src="./assets/images/.png" alt="">
+                <img src="./assets/images/khaizan.png" alt="">
               </div>
              <div class="card-heading">
                 <h5 class="card-title">Khaizan</h5>
