--- a/chat.html
+++ b/chat.html
@@ -92,7 +92,7 @@
             <a class="portfolio-card portfolio-card-01">
               <div class="card-heading">
 
-                <div class="card-image01">
+                <div class="card-image02">
                     <img src="./assets/images/Chat01.png" alt="">
                 </div>
 
@@ -111,7 +111,7 @@
                     <img src="./assets/images/Chat02.png" alt="">
                 </div>
 
-                <span class="card-subtitle02">For this project, I focused on user flows, sketching, wireframing, style guidelines, and prototyping.</span>
+                <span class="card-subtitle02">For this project, I focused on user flows, sketching, wireframing, and prototyping.</span>
 
                 <div class="section-subtitle-container01">
                     <h5 class="title section-subtitle">Wireframe</h5>
@@ -125,12 +125,6 @@
                 <div class="card-image01">
                     <img src="./assets/images/Chat03.png" alt="">
                 </div>
-
-                <div class="section-subtitle-container01">
-                    <h5 class="title section-subtitle">Style Guide</h5>
-                </div>
-                
-                <span class="card-subtitle01">I then determined which features the app would require in order to be successful and helpful. I also made a user flow diagram to map out these features and determine what type of pages the app would require.</span>
 
                 <div class="card-image01">
                     <img src="./assets/images/Chat.png" alt="">
