--- a/project.html
+++ b/project.html
@@ -94,29 +94,18 @@
               </div>
             </a>
 
-            <a href="" class="portfolio-card portfolio-card-3">
+            <a href="silentmoon.html" class="portfolio-card portfolio-card-3">
               <div class="card-image">
-                <img src="./assets/images/.png" alt="">
+                <img src="./assets/images/silent01.png" alt="">
               </div>
               <div class="card-heading">
                 <h5 class="card-title"></h5>
-                <h5 class="card-title"></h5>
+                <h5 class="card-title">Silent Moon</h5>
                 <span class="card-subtitle">UI/UX Design</span>
               </div>
             </a>
 
-            <a href="" class="portfolio-card portfolio-card-4">
-              <div class="card-image">
-                <img src="./assets/images/.png" alt="">
-              </div>
-              <div class="card-heading">
-                <h5 class="card-title"></h5>
-                <h5 class="card-title"></h5>
-                <span class="card-subtitle">UI/UX Design</span>
-              </div>
-            </a>
-
-            <a href="https://www.khaizan.com/" class="portfolio-card portfolio-card-5">
+            <a href="https://www.khaizan.com/" class="portfolio-card portfolio-card-4">
               <div class="card-image">
                 <img src="./assets/images/khaizan.png" alt="">
               </div>
@@ -127,16 +116,23 @@
               </div>
             </a>
 
-            <a href="https://sites.google.com/view/beyh/home" class="portfolio-card portfolio-card-6">
+            <a href="https://sites.google.com/view/beyh/home" class="portfolio-card portfolio-card-5">
               <div class="card-image">
                 <img src="./assets/images/beyh.png" alt="">
               </div>
              <div class="card-heading">
                 <h5 class="card-title">Beyh Food</h5>
                 <span class="card-subtitle">Web design & development</span>
-                <h6 class="card-subtitle">HTML CSS JS MYSQL PHP</h6>
+                <h6 class="card-subtitle">HTML CSS JS</h6>
               </div>
             </a>
+
+            <div class="portfolio-card portfolio-card-6 large-button-container">
+              <a href="index.html" class="large-button button-fill">
+                Home
+                <br>
+              </a>
+            </div>
   
           </div>
         </div>
